# pinyinchch

./: Cargo.toml  README.md  RELEASES.md
bin_data/: dag_char.rkyv  hmm_emission.rkyv  hmm_py2hz.rkyv  hmm_start.rkyv
data/: dag_char.json  hmm_emission.json  hmm_py2hz.json  hmm_start.json
examples/: anthoer_hmm_example.rs  dag_example.rs  hmm_example.rs
pinyinchch-model-dag/: Cargo.toml  default.rs  lib.rs
pinyinchch-model-hmm/: Cargo.toml  default.rs  lib.rs
pinyinchch-type/: Cargo.toml  dag.rs  hmm.rs  lib.rs
src/: error.rs  lib.rs  priority.rs
src/dag/: default.rs  dispatch.rs  mod.rs
src/hmm/: default.rs  mod.rs  viterbi.rs
src/pinyin/: mod.rs  trie_tokenizer.rs
xtask/: Cargo.toml  main.rs  task.rs
