[package]
name = "pinyinchch-model-dag"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["Chinese", "Pinyin", "Hanzi", "Conversion", "Dag"]
description = "一个拼音转汉字的 DAG 模型"

[lib]
path = "lib.rs"

[dependencies]
pinyinchch-type = { workspace = true, features = ["rkyv"] }
rkyv = { workspace = true }