[package]
name = "pinyinchch-type"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["Chinese", "Pinyin", "Hanzi", "Conversion", "Tokenize"]
description = "一个拼音转汉字的工具库"

[lib]
path = "lib.rs"

[features]
default = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dependencies]
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
