[package]
name = "xtask"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
pinyinchch-type = { workspace = true, features = ["serde", "rkyv"] }
rkyv = { workspace = true }
serde_json = "1"

[[bin]]
name = "xtask"
path = "main.rs"
