[package]
name = "xtask"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
pinyinchch-type = { workspace = true, features = ["serde", "rkyv"] }
rkyv = { workspace = true }
serde_json = "1"
snafu = { workspace = true }

[[bin]]
name = "xtask"
path = "main.rs"
